Dyad 2: Fix issues with widget block centre alignments.

--- a/dyad-2/css/blocks.css
+++ b/dyad-2/css/blocks.css
@@ -283,11 +283,13 @@ body:not(.has-post-thumbnail) .wp-block-table.alignfull {
 6.0 Blocks - Widget Blocks
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
-.wp-block-archives.aligncenter,
 .wp-block-categories.aligncenter,
-.wp-block-latest-posts.aligncenter {
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
 	text-align: center;
 }
