--- a/dyad-2/css/editor-blocks.css
+++ b/dyad-2/css/editor-blocks.css
@@ -527,13 +527,12 @@ p.has-drop-cap:not(:focus)::first-letter {
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
-[data-align="center"] .wp-block-archives ul,
-[data-align="center"] .wp-block-categories ul,
-[data-align="center"] .wp-block-latest-posts ul {
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
 	list-style-position: inside;
-	text-align: center;
 }
 
 /* Latest Comments */
